We added boostrap, applied layout to the page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <!-- Nav-bar  -->
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a href="#">Treebook</a>
+        <ul class="nav">
+          <li class="active"><%= link_to "All Statuses", statuses_path%>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div><!-- /Nav-bar  -->
+  <div class="container">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
